# github-new-repo-radar

./: .gitignore  README.md  pyproject.toml  run_today.command
deploy/systemd/: github-new-repo-radar.service  github-new-repo-radar.timer
github_new_repo_radar/: __init__.py  cli.py
scripts/: daily_report.sh  install_systemd_timer.sh
