[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-new-repo-radar"
version = "0.3.0"
description = "Fetch and analyze GitHub repositories created today, then render visual reports for humans and JSON for LLM agents."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = []

[project.scripts]
github-new-repo-radar = "github_new_repo_radar.cli:main"
